--- a/views/contactUs.erb
+++ b/views/contactUs.erb
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			
+
 			<%= erb :'templates/header' %>
 
 			<h1>Contact Us</h1>
@@ -17,7 +17,7 @@
 
 			<h3>For pricing information and any other questions, please email <span>contact@citadelmetalsupply.com</span> or fill out the form below for a prompt response!</h3>
 
-			<% if flash[:confirmation] %>
+			<!-- <% if flash[:confirmation] %>
 				<script type="text/javascript">
 					alert("Thanks for your email! We will get back to you shortly!");
 				</script>
@@ -33,7 +33,7 @@
 			    </form>
 			</div>
 
-		</div>
+		</div> -->
 
 		<%= erb :'templates/scripts' %>
 
